src/components/input-bar/input-bar.css
body {
  background-color: rgb(32, 32, 32);
  background-color: rgb(32, 32, 32);
}
.field {
  display: flex;
  /* flex-direction: column; */
  /* align-items: center; */
  justify-content: center;
  width: 100vw;
}
.search form {
  position: relative;
  /* margin: 0 auto; */
  margin: 0 30px 0 30px;
  color: white;
}
.search {
  position: relative;
  margin-top: 40px;
}
.search-area {
  margin-top: 20px;
  width: 93%;
  height: 32px;
  padding-left: 20px;
  border: 2px solid rgb(254, 155, 98);

  border-radius: 10px;
  outline: none;
  /* background: #f9f0da; */
  background: rgb(19, 19, 19);
  color: white;
  font-size: 16px;
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  display: flex;
  flex-direction: column;
  padding-top: 10px;
}
.search-input {
  margin-top: 20px;
  width: 93%;
  height: 42px;
  padding-left: 20px;
  border: 2px solid rgb(254, 155, 98);

  border-radius: 10px;
  outline: none;
  background: rgb(19, 19, 19);
  color: white;
  font-size: 16px;
}
.search button {
  margin-top: 20px;
  width: 100%;
  height: 42.5px;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  outline: none;
  color: white;
  background: rgb(254, 155, 98);
  border: 2px solid rgb(254, 155, 98);
}
.search button:active {
  outline: none;
  background: rgb(131, 233, 21);
}
.search button:hover {
  background: rgb(32, 32, 32);
  border: 2px solid rgb(254, 155, 98);
}
.search button:focus {
  outline: none;
}
.answerField {
  white-space: pre-line;
  display: flex;
  justify-content: center;
  width: 80vw;
  margin-top: 40px;
  margin-right: 30px;
  padding: 20px;
  /* border: 1px solid gray; */
  border: 2px solid rgb(254, 155, 98);

  border-radius: 10px;
  color: white;
}
.radio-field {
  display: flex;
  flex-direction: column;

  width: 350px;
}
.radio-field-wrapper {
  width: 100%;
  display: flex;
  border-radius: 10px;
  justify-content: center;
}

.form-field {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.radio-fieldset {
  border: 2px solid rgb(254, 155, 98);
  background: rgb(19, 19, 19);
  border-radius: 10px;
  outline: none;
}
input[type='radio'],
label {
  cursor: pointer;
}

input[type='radio'] {
  position: relative;
  height: 12px;
  width: 12px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

input[type='radio']::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  /* border: 2px in rgb(254, 155, 98); */
}

input[type='radio']:checked::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: green;
  transform: translate(-50%, -50%);
  visibility: visible;
}
@media (max-width: 900px) {
  .field {
    flex-direction: column;
    align-items: center;
  }
  .search form {
    margin: 0 auto;
  }
  .answerField {
    margin-right: 0;
    margin-left: 0;
  }
  .radio-field {
    width: 300px;
  }
}

